tests/compile-fail/integration__integration__anm_consts__meta_sprite_id_non_const.snap
---
source: tests/integration/anm_consts.rs
expression: stderr
---
error: unknown variable 'I0'
   ┌─ <input>:29:65
   │
29 │         sprite200: {x: 0.0, y: 0.0, w: 512.0, h: 480.0, id: 3 * I0},
   │                                                                 ^^ not found in this scope
   │
   = there is a 'I0' defined in ANM, which is not a const expression


